log-output/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercise-apps
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
